--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@types/three": "^0.180.0",
+    "pyodide": "^0.28.3",
     "three": "^0.180.0",
     "vue": "^3.3.8"
   }
