--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A minimal Electron + Vue application",
   "main": "main/main.js",
   "scripts": {
+    "dev:web": "vite",
     "dev": "node scripts/dev-server.js",
     "build": "node scripts/build.js && electron-builder",
     "build:win": "node scripts/build.js && electron-builder --win",
