--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@types/three": "^0.180.0",
+    "martinez-polygon-clipping": "^0.7.4",
     "pyodide": "^0.28.3",
     "three": "^0.180.0",
     "vue": "^3.3.8"
