--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vite": "^4.5.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.19.0",
     "@types/three": "^0.180.0",
     "martinez-polygon-clipping": "^0.7.4",
     "pyodide": "^0.28.3",
